Added 3 new keys to localization

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -9,7 +9,7 @@ On January 16, 2024, Clerk launched version 5 of its full suite of JavaScript li
 
 Version 5 ships with an improved design and UX for its built-in components, no "flash of white page" when authenticating, and a new middleware for Next.js which defaults to not protecting any routes. Along with these highly requested features some smaller DX improvements and housekeeping items made its way into the release. If you want to know everything that's new, read the [v5 announcement post](#TODO).
 
-<Callout type="info" > 
+<Callout type="info" >
   Version 5/v5 refers to the [`@clerk/clerk-js`](https://www.npmjs.com/package/@clerk/clerk-js) package version. However, other SDKs like `@clerk/backend` or `@clerk/clerk-expo` are versioned independently (and would upgrade from v1 to v2). To make this page easier to read for instances of general advice only v5 is mentioned. You can think of v4 as the previous major of your SDK and v5 as the current in those cases.
 </Callout>
 
@@ -80,7 +80,7 @@ As of this major version Clerk also provides a `@clerk/upgrade` CLI you can use 
 npx @clerk/upgrade
 ```
 
-<Callout type="info" > 
+<Callout type="info" >
   The CLI uses regular expressions to scan for patterns that match breaking changes and log relevant upgrade notices (it doesn't change your source code). As such there is no 100% guarantee that all occurrences of those breaking changes are found.
 </Callout>
 
@@ -192,7 +192,7 @@ The `CLERK_FRONTEND_API` environment variable was removed. Use `CLERK_PUBLISHABL
 
 The `frontendApi` prop passed to `<ClerkProvider>` was removed and you should use `publishableKey`. The function parameter was also renamed (you are using this with `createClerkClient` for example).
 
-<Callout type="warning" > 
+<Callout type="warning" >
   The values are different, so this is not just a key replacement. You can visit your [Clerk dashboard](https://dashboard.clerk.com/last-active?path=api-keys) to copy/paste the new keys after choosing your framework.
 </Callout>
 
@@ -344,8 +344,8 @@ This function should be expected to be returned from one of the following Clerk 
 
 ```diff
 import { useSignIn } from "@clerk/nextjs"
- 
-export default function SignIn() { 
+
+export default function SignIn() {
   const { setActive } = useSignIn()
 
 - await setSession("sessionID", () => void)
@@ -365,7 +365,7 @@ export default function SignIn() {
 await setActive({
   session: 'sessionID',
   organization: 'orgID',
-  beforeEmit: () => void 
+  beforeEmit: () => void
 })
 await setActive({
   session: sessionObj,
@@ -378,7 +378,7 @@ Or as part of the `Clerk` class of `@clerk/clerk-js`:
 
 ```js
 import Clerk from "@clerk/clerk-js"
- 
+
 const clerkPublishableKey = ​your_publishable_key​
 const clerk = new Clerk(clerkPublishableKey)
 await clerk.load()
@@ -398,7 +398,7 @@ If you would like to have your JWT return all of the user's organizations, you c
 
 ### `@clerk/backend`
 
-<Callout type="warning" > 
+<Callout type="warning" >
   Please take extra care in reading the instructions for the new response payload.
 </Callout>
 
@@ -432,8 +432,8 @@ If you would like to have your JWT return all of the user's organizations, you c
 
     So on most requests you'll get back `{ data, errors }`. For requests that contain pagination information or where `data` is an array, you'll also receive `totalCount`. If an error happens, you'll get `errors` and in most cases also `clerkTraceId`, `status`, and `statusText`.
 
-    <Callout type="warning" > 
-      You'll need to throw errors yourself as the `@clerk/backend` functions are not handling this for you anymore. See the examples below on how to do that. 
+    <Callout type="warning" >
+      You'll need to throw errors yourself as the `@clerk/backend` functions are not handling this for you anymore. See the examples below on how to do that.
     </Callout>
 
     The new API looks like this:
@@ -458,7 +458,7 @@ If you would like to have your JWT return all of the user's organizations, you c
 
     const clerkClient = createClerkClient({ secretKey: "" })
 
-    const { 
+    const {
       data,
       errors,
       status,
@@ -525,7 +525,7 @@ Some more niche use cases and their changes:
     ```diff
     - loadInterstitialFromLocal({ pkgVersion: "" })
     + loadInterstitialFromLocal({ clerkJSVersion: "" })
-    ```   
+    ```
   </AccordionPanel>
 
   <AccordionPanel>
@@ -580,7 +580,7 @@ type StorageCache = {
 
 ### `@clerk/clerk-js`
 
-<Callout type="warning" > 
+<Callout type="warning" >
   Please take extra care in reading the instructions for the modified shape of paginated responses and new pagination parameters.
 </Callout>
 
@@ -651,13 +651,13 @@ Some more niche use cases and their changes:
 <Accordion titles={["Removal of unstable/experimental properties", "Appearance", "Use .imageUrl for image related responses/resources"]} heading="h4">
   <AccordionPanel>
     Removed the following properties:
-    
+
     - `Clerk.experimental_canUseCaptcha`
     - `Clerk.experimental_captchaSiteKey`
     - `Clerk.experimental_captchaURL`
     - `Clerk.__unstable__invitationUpdate`
     - `Clerk.__unstable__membershipUpdate`
-    
+
     There is no replacement for these experimental properties.
   </AccordionPanel>
   <AccordionPanel>
@@ -752,7 +752,11 @@ The [en-US localization object](https://github.com/clerk/javascript/blob/main/pa
         alternativeMethods: {
           subtitle: "Facing issues? You can use any of these methods to sign in.",
           actionText: "Don’t have any of these?",
-        }
+        },
+        accountSwitcher: {
+          title: 'Choose an account',
+          subtitle: 'Select the account with which you wish to continue.',
+        },
       },
       userProfile: {
         mfaPhoneCodePage: {
@@ -802,6 +806,9 @@ The [en-US localization object](https://github.com/clerk/javascript/blob/main/pa
         verifyDomainPage: {
           title: "Verify domain",
         },
+        invitePage: {
+          selectDropdown__role: "Select role",
+        }
       },
       unstable__errors: {
         form_param_format_invalid__phone_number: "Phone number must be in a valid international format",
@@ -1049,26 +1056,26 @@ The [en-US localization object](https://github.com/clerk/javascript/blob/main/pa
     import type { NextRequest } from "next/server";
 
     const publicPaths = ["/", "/sign-in*", "/sign-up*"];
-    
+
     const isPublic = (path: string) => {
       return publicPaths.find((x) =>
         path.match(new RegExp(`^${x}$`.replace("*$", "($|/)")))
       );
     };
-    
+
     export default withClerkMiddleware((request: NextRequest) => {
       if (isPublic(request.nextUrl.pathname)) {
         return NextResponse.next();
       }
       const { userId } = getAuth(request);
-    
-      if (!userId) { 
+
+      if (!userId) {
         const signInUrl = new URL("/sign-in", request.url);
         return NextResponse.redirect(signInUrl);
       }
       return NextResponse.next();
     });
-    
+
     export const config = {
       matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
     }
@@ -1197,11 +1204,11 @@ A couple of exported constants have been removed from `@clerk/nextjs` as you sho
 
     ```ts filename="middleware.ts"
     import { authMiddleware } from "@clerk/nextjs";
-    
+
     export default authMiddleware({
       publicRoutes: (req) => !req.url.includes("/dashboard"),
     });
-    
+
     export const config = {
       matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
     };
@@ -1287,7 +1294,7 @@ A couple of exported constants have been removed from `@clerk/nextjs` as you sho
     + import { ClerkApp } from "@clerk/remix"
 
       export const loader = (args: DataFunctionArgs) => {
-        return rootAuthLoader(args);  
+        return rootAuthLoader(args);
       }
 
       export default ClerkApp(App)
