--- a/docs/references/javascript/types/clerk-paginated-response.mdx
+++ b/docs/references/javascript/types/clerk-paginated-response.mdx
@@ -16,4 +16,4 @@ An interface that describes the response of a method that returns a paginated li
 
 ## Error handling
 
-Clerk's SDKs always use `Promise<ClerkPaginatedResponse<T>>`. If the promise resolves you'll get back the [properties](#properties), if it's rejected you'll receive a `ClerkAPIResponseError` or network error.
+Clerk's SDKs always use `Promise<ClerkPaginatedResponse<T>>`. If the promise resolves, you will get back the [properties](#properties) listed above. If the promise is rejected, you will receive a `ClerkAPIResponseError` or network error.
