update javascript docs to have clearer headings; add missing sdk info such as return info for methods

--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -24,14 +24,14 @@ The `OrganizationInvitation` object is the model around an organization invitati
 
 ### `revoke()`
 
+Revokes the invitation for the email it corresponds to.
+
 ```typescript
 function revoke(): Promise<OrganizationInvitation>;
 ```
 
-Revokes the invitation for the email it corresponds to.
-
-### Returns
+### `revoke()` returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<OrganizationInvitation>` | This method returns a `Promise` which resolves to the `OrganizationInvitation` for the revolked invitation. |
+| `Promise<OrganizationInvitation>` | A `Promise` which resolves to the `OrganizationInvitation` for the revolked invitation. |
