--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -17,7 +17,6 @@ All sessions that are **expired**, **removed**, **replaced**, **ended** or **aba
 
 > For more details regarding the different session states, see our documentation on [session management](/docs/authentication/configuration/session-options).
 
-
 ## Properties
 
 | Name | Type | Description |
@@ -39,54 +38,53 @@ All sessions that are **expired**, **removed**, **replaced**, **ended** or **aba
 
 ### `end()`
 
+Marks the session as ended. The session will no longer be active for this `Client` and its status will become **ended**.
+
 ```typescript
 function end(): Promise<Session>;
 ```
 
-Marks the session as ended. The session will no longer be active for this Client and its status will become **ended**.
-
-#### Returns
+#### `end()` returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<Session>` | The session that was just ended. |
+| `Promise<Session>` | A `Promise` which resolves to the `Session`. |
 
 ### `remove()`
+
+Marks the session as removed. The session will no longer be active for this Client and its status will become **removed**.
 
 ```typescript
 function remove(): Promise<Session>;
 ```
 
-Marks the session as removed. The session will no longer be active for this Client and its status will become **removed**.
-
-#### Returns
+#### `remove()` returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<Session>` | The session that was just removed. |
+| `Promise<Session>` | A `Promise` which resolves to the `Session`. |
 
 ### `touch()`
+
+Touches the session, signifying some kind of user activity. Use this method to record any updates to user activity.
 
 ```typescript
 function touch(): Promise<Session>;
 ```
 
-Touches the session, signifying some kind of user activity. Use this method to record any updates to user activity.
-
-
-#### Returns
+#### `touch()` returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<Session>` | The session that was just touched. |
+| `Promise<Session>` | A `Promise` which resolves to the `Session`. |
 
 ### `getToken()`
+
+Retrieves the user's session token for the given template or the default clerk token. This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for clerk token is one minute.
 
 ```typescript
 function getToken(options?: GetTokenOptions): Promise<string | null>;
 ```
-
-Retrieves the user's session token for the given template or the default clerk token. This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for clerk token is one minute.
 
 #### `GetTokenOptions`
 
@@ -97,14 +95,15 @@ Retrieves the user's session token for the given template or the default clerk t
 | `throwOnError?` | `boolean` | Whether to throw an error or return an empty string, if an error occurs. |
 | `skipCache?` | `boolean` | Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields).<br />Defaults to `false`. |
 
-
-#### Returns
+#### `getToken()` returns
 
 | Type | Description |
 | --- | --- |
 | `Promise<string \| null>` | The requested token. |
 
 ### `checkAuthorization()`
+
+Checks if the user is authorized for the specified role or permission.
 
 ```typescript
 function checkAuthorization(param: CheckAuthorizationParams) => boolean;
@@ -128,7 +127,7 @@ type CheckAuthorizationParams =
 | `role` | `string` | Accepts [role](/docs/organizations/roles-permissions#roles) key |
 | `permission` | `string` | Accepts [permission](/docs/organizations/roles-permissions#permissions) key |
 
-#### Returns
+#### `checkAuthorization()` returns
 
 | Type | Description |
 | --- | --- |
