--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -46,15 +46,15 @@ Also, the attributes of the `SignUp` object can basically be grouped into three 
 
 ### `create()`
 
-```typescript
-function create(params: SignUpCreateParams): Promise<SignUpResource>;
-```
-
 This method initiates a new sign-up flow. It creates a new `SignUp` object and de-activates any existing `SignUp` that the client might already had in progress.
 
 The form of the given `params` depends on the configuration of the instance. Choices on the instance settings affect which options are available to use.
 
 The `create` method will return a promise of the new `SignUp` object. This sign-up might be complete if you supply the required fields in one go. However, this is not mandatory. Clerk's sign-up process provides great flexibility and allows users to easily create multi-step sign-up flows.
+
+```typescript
+function create(params: SignUpCreateParams): Promise<SignUpResource>;
+```
 
 #### `SignUpCreateParams`
 
@@ -75,28 +75,33 @@ The `create` method will return a promise of the new `SignUp` object. This sign-
 | `ticket` | `string` | Provide the ticket *or token* generated from the Backend API. This parameter is required only if `strategy` is set to `ticket`. |
 | `transfer` | `boolean` | Transfer the user to a dedicated sign-up for an OAuth flow. |
 
-### `update()`
+#### `create()` returns
 
-```typescript
-function update(params: SignUpUpdateParams): Promise<SignUpResource>;
-```
+| Type | Description |
+| --- | --- |
+| `Promise<SignUpResource>` | A `Promise` which resolves to the current [`SignUp`][signup-ref]. |
+
+### `update()`
 
 This method is used to update the current sign-up.
 
 As with `create`, the form of the given `params` depends on the configuration of the instance.
 
+```typescript
+function update(params: SignUpUpdateParams): Promise<SignUpResource>;
+```
+
 #### `SignUpUpdateParams`
 
 `SignUpUpdateParams` is a mirror of [`SignUpCreateParams`](#sign-up-create-params) with the same fields and types.
 
-### `createMagicLinkFlow()`
+#### `update()` returns
 
-```typescript
-function createMagicLinkFlow(): {
-  startMagicLinkFlow: (params: StartMagicLinkFlowParams) => Promise<SignUp>;
-  cancelMagicLinkFlow: () => void;
-};
-```
+| Type | Description |
+| --- | --- |
+| `Promise<SignUpResource>` | This method returns a `Promise` which resolves to the current [`SignUp`][signup-ref]. |
+
+### `createMagicLinkFlow()`
 
 Sets up a sign-up with magic link flow. Calling `createMagicLinkFlow()` will return two functions.
 
@@ -104,13 +109,20 @@ The first function is async and starts the magic link flow, preparing a magic li
 
 The second function can be used to stop polling at any time, allowing for full control of the flow and cleanup. The signature is `cancelMagicLinkFlow() => void`.
 
-#### Returns
+```typescript
+function createMagicLinkFlow(): {
+  startMagicLinkFlow: (params: StartMagicLinkFlowParams) => Promise<SignUpResource>;
+  cancelMagicLinkFlow: () => void;
+};
+```
+
+#### `createMagicLinkFlow()` returns
 
 `createMagicLinkFlow` returns an object with two functions:
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `startMagicLinkFlow` | <code>(params: [StartMagicLinkFlowParams](#start-magic-link-flow-params)) => Promise\<SignUp\></code> | Function to start the magic link flow. It prepares a magic link verification and polls for the verification result. |
+| `startMagicLinkFlow` | <code>(params: [StartMagicLinkFlowParams](#start-magic-link-flow-params)) => Promise\<SignUpResource\></code> | Function to start the magic link flow. It prepares a magic link verification and polls for the verification result. |
 
 #### `StartMagicLinkFlowParams`
 
@@ -147,3 +159,5 @@ In addition to the methods listed above, the `SignUp` class also has the followi
 
 *   [`prepareWeb3WalletVerification()`](/docs/references/javascript/sign-up/web3-verification#prepare-web3-wallet-verification)
 *   [`attemptWeb3WalletVerification()`](/docs/references/javascript/sign-up/web3-verification#attempt-web3-wallet-verification)
+
+[signup-ref]: /docs/references/javascript/sign-up/sign-up
