--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -5,16 +5,17 @@ description: These are the methods that help you manage a user's password.
 
 # User password management
 
+These are all methods on the [`User`][signup-ref] class that help you manage a user's password.
+
 ## `updatePassword()`
+
+Updates the user's password.
 
 ```typescript
 function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
 ```
 
-Updates the user's password.
-
 ### `UpdateUserPasswordParams`
-
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -22,16 +23,30 @@ Updates the user's password.
 | `currentPassword?` | `string` | The user's current password. |
 | `signOutOfOtherSessions?` | `boolean \| undefined` | If set to `true`, all sessions will be signed out. |
 
+### `updatePassword()` returns
+
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[User][user-ref]\></code> | A `Promise` which resolves with the current [`User`][user-ref]. |
+
 ## `removePassword()`
+
+Removes the user's password.
 
 ```typescript
 function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
 ```
-
-Removes the user's password.
 
 ### `RemoveUserPasswordParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `currentPassword` | `string` | The user's current password. |
+
+### `removePassword()` returns
+
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[User][user-ref]\></code> | A `Promise` which resolves with the current [`User`][user-ref]. |
+
+[user-ref]: /docs/references/javascript/user/user
