--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -5,75 +5,71 @@ description: These are the methods and types related to Time-based One-time Pass
 
 # Time-based one-time password (TOTP)
 
-## Methods
+These are all methods on the [`User`][signup-ref] class that allow you to generate and verify TOTP secrets, disable TOTP, and manage backup codes for user authentication.
 
-### `createTOTP()`
+## `createTOTP()`
+
+Generates a TOTP secret for a user that can be used to register the application on the user's authenticator app of choice. Note that if this method is called again (while still unverified), it replaces the previously generated secret.
 
 ```typescript
 function createTOTP(): Promise<TOTPResource>;
 ```
 
-Generates a TOTP secret for a user that can be used to register the application on the user's authenticator app of choice. Note that if this method is called again (while still unverified), it replaces the previously generated secret.
-
-
-#### Returns
+### `createTOTP()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[TOTPResource](#totp-resource)\></code> | The newly created TOTP object. |
+| <code>Promise\<[TOTPResource](#totp-resource)\></code> | A `Promise` which resolves to the newly created [`TOTP`](#totp-resource) object. |
 
-### `verifyTOTP()`
+## `verifyTOTP()`
+
+Verifies a TOTP secret after a user has created it. The user must provide a code from their authenticator app, that has been generated using the previously created secret. This way, correct set up and ownership of the authenticator app can be validated.
 
 ```typescript
 function verifyTOTP(params: VerifyTOTPParams): Promise<TOTPResource>;
 ```
 
-Verifies a TOTP secret after a user has created it. The user must provide a code from their authenticator app, that has been generated using the previously created secret. This way, correct set up and ownership of the authenticator app can be validated.
-
-#### `VerifyTOTPParams`
+### `VerifyTOTPParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `code` | `string` | A 6 digit TOTP generated from the user's authenticator app. |
 
-#### Returns
+### `verifyTOTP()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[TOTPResource](#totp-resource)\></code> | The newly verified TOTP object. |
+| <code>Promise\<[TOTPResource](#totp-resource)\></code> | A `Promise` which resolves to the newly verified [`TOTP`](#totp-resource) object. |
 
-### `disableTOTP()`
+## `disableTOTP()`
+
+Disables TOTP by deleting the user's TOTP secret.
 
 ```typescript
 function disableTOTP(): Promise<DeletedObject>;
 ```
 
-Disables TOTP by deleting the user's TOTP secret.
-
-#### Returns
+### `disableTOTP()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[DeletedObject](/docs/references/javascript/types/deleted-object)\></code> | The reference to the deleted TOTP object. |
+| <code>Promise\<[DeletedObject](/docs/references/javascript/types/deleted-object)\></code> | A `Promise` which resolves to a reference to the deleted [`TOTP`](#totp-resource) object. |
 
-### `createBackupCode()`
+## `createBackupCode()`
+
+Generates a fresh new set of backup codes for the user. Note that if this method is called again, it replaces the previously generated codes.
 
 ```typescript
 function createBackupCode(): Promise<BackupCodeResource>;
 ```
 
-Generates a fresh new set of backup codes for the user. Note that if this method is called again, it replaces the previously generated codes.
-
-
-#### Returns
+### `createBackupCode()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[BackupCodeResource](#backup-code-resource)\></code> | The newly created backup code. |
+| <code>Promise\<[BackupCodeResource](#backup-code-resource)\></code> | A `Promise` which resolves to the newly created backup code. |
 
-## Types
-
-### `TOTPResource`
+## `TOTPResource`
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -85,7 +81,7 @@ Generates a fresh new set of backup codes for the user. Note that if this method
 | `createdAt` | `Date` | Creation date of the TOTP secret |
 | `updatedAt` | `Date` | Update timestamp of the TOTP secret |
 
-### `BackupCodeResource`
+## `BackupCodeResource`
 
 | Name | Type | Description |
 | --- | --- | --- |
