--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -36,7 +36,7 @@ In case the magic link verification wasn't successful, the `handleMagicLinkVerif
 
 Take a look at the function parameters description below for more usage details.
 
-### Properties
+### `handleMagicLinkVerification()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -51,13 +51,15 @@ Take a look at the function parameters description below for more usage details.
 | `redirectUrl?` | `string \| undefined` | Full URL or path to navigate after successful magic link verification on the same device, but not completed sign in or sign up. |
 | `onVerifiedOnOtherDevice?` | `() => void` | Callback function to be executed after successful magic link verification on another device. |
 
-### Returns
+### `handleMagicLinkVerification()` returns
 
 | Type | Description |
 | --- | --- |
 | `Promise<unknown>` | This method will throw a [`MagicLinkError`](/docs/custom-flows/magic-links) if the magic link verification failed or the link expired. Check the error's `code` property for details. |
 
 ## `handleRedirectCallback()`
+
+Completes a custom OAuth flow started by calling either [`SignIn.authenticateWithRedirect(params)`](/docs/references/javascript/clerk/sign-in) or [`SignUp.authenticateWithRedirect(params)`](/docs/references/javascript/clerk/sign-up).
 
 ```typescript
 function handleRedirectCallback(
@@ -66,9 +68,7 @@ function handleRedirectCallback(
 ): Promise<unknown>;
 ```
 
-Completes a custom OAuth flow started by calling either [`SignIn.authenticateWithRedirect(params)`](/docs/references/javascript/clerk/sign-in) or [`SignUp.authenticateWithRedirect(params)`](/docs/references/javascript/clerk/sign-up)
-
-### Properties
+### `handleRedirectCallback()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -91,8 +91,8 @@ Completes a custom OAuth flow started by calling either [`SignIn.authenticateWit
 
 ## `handleUnauthenticated()`
 
+Handles a 401 response from Frontend API by refreshing the client and session object accordingly.
+
 ```typescript
 function handleUnauthenticated(opts?: { broadcast: boolean }): Promise<unknown>;
 ```
-
-Handles a 401 response from Frontend API by refreshing the client and session object accordingly.
