--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -25,7 +25,7 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[Organization][org-ref] \| undefined\></code> | This method returns a `Promise` which resolves to the requested [`Organization`][org-ref]. |
+| <code>Promise\<[Organization][org-ref] \| undefined\></code> | A `Promise` which resolves to the requested [`Organization`][org-ref]. |
 
 ## `createOrganization()`
 
@@ -46,7 +46,7 @@ function createOrganization(params: CreateOrganizationParams): Promise<Organizat
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[Organization][org-ref\></code> | This method returns a `Promise` which resolves to the newly created [`Organization`][org-ref]. |
+| <code>Promise\<[Organization][org-ref\></code> | A `Promise` which resolves to the newly created [`Organization`][org-ref]. |
 
 ### `createOrganization()` example
 
