--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -13,7 +13,18 @@ The [`<OrganizationSwitcher />`][orgswitcher-ref] component is used to enable th
 
 Render the [`<OrganizationSwitcher />`][orgswitcher-ref] component to an HTML `<div>` element.
 
-### Usage
+```typescript
+function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwitcherProps): void;
+```
+
+### `mountOrganizationSwitcher()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<OrganizationSwitcher />`][orgswitcher-ref] component |
+| `props?` | [`OrganizationSwitcherProps`](#organization-switcher-props) | The properties to pass to the [`<OrganizationSwitcher />`][orgswitcher-ref] component |
+
+### `mountOrganizationSwitcher()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {15-19}
@@ -62,22 +73,21 @@ Render the [`<OrganizationSwitcher />`][orgswitcher-ref] component to an HTML `<
   ```
 </CodeBlockTabs>
 
-### Properties
-
-```typescript
-function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwitcherProps): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<OrganizationSwitcher />`][orgswitcher-ref] component |
-| `props?` | [`OrganizationSwitcherProps`](#organization-switcher-props) | The properties to pass to the [`<OrganizationSwitcher />`][orgswitcher-ref] component |
-
 ## `unmountOrganizationSwitcher()`
 
 Unmount and run cleanup on an existing [`<OrganizationSwitcher />`][orgswitcher-ref] component instance.
 
-### Usage
+```typescript
+function unmountOrganizationSwitcher(node: HTMLDivElement): void;
+```
+
+### `unmountOrganizationSwitcher()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<OrganizationSwitcher />`][orgswitcher-ref] component instance |
+
+### `unmountOrganizationSwitcher()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
@@ -125,16 +135,6 @@ Unmount and run cleanup on an existing [`<OrganizationSwitcher />`][orgswitcher-
   </script>
   ```
 </CodeBlockTabs>
-
-### Properties
-
-```typescript
-function unmountOrganizationSwitcher(node: HTMLDivElement): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<OrganizationSwitcher />`][orgswitcher-ref] component instance |
 
 ## `OrganizationSwitcherProps`
 
