--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -13,7 +13,18 @@ The [`<UserButton />`][userbutton-ref] component is used to render the familiar 
 
 Render the [`<UserButton />`][userbutton-ref] component to an HTML `<div>` element.
 
-### Usage
+```typescript
+function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
+```
+
+### `mountUserButton()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<UserButton />`][userbutton-ref] component |
+| `props?` | [`UserButtonProps`](#user-button-props) | The properties to pass to the [`<UserButton />`][userbutton-ref] component |
+
+### `mountUserButton()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {15-19}
@@ -62,22 +73,21 @@ Render the [`<UserButton />`][userbutton-ref] component to an HTML `<div>` eleme
   ```
 </CodeBlockTabs>
 
-### Properties
-
-```typescript
-function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<UserButton />`][userbutton-ref] component |
-| `props?` | [`UserButtonProps`](#user-button-props) | The properties to pass to the [`<UserButton />`][userbutton-ref] component |
-
 ## `unmountUserButton()`
 
 Unmount and run cleanup on an existing [`<UserButton />`][userbutton-ref] component instance.
 
-### Usage
+```typescript
+function unmountUserButton(node: HTMLDivElement): void;
+```
+
+### `unmountUserButton()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<UserButton />`][userbutton-ref] component instance. |
+
+### `unmountUserButton()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
@@ -125,16 +135,6 @@ Unmount and run cleanup on an existing [`<UserButton />`][userbutton-ref] compon
   </script>
   ```
 </CodeBlockTabs>
-
-### Properties
-
-```typescript
-function unmountUserButton(node: HTMLDivElement): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<UserButton />`][userbutton-ref] component instance. |
 
 ## `UserButtonProps`
 
