--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -13,7 +13,18 @@ The [`<UserProfile />`][userprofile-ref] component is used to render a beautiful
 
 Render the [`<UserProfile />`][userprofile-ref] component to an HTML `<div>` element.
 
-### Usage
+```typescript
+function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
+```
+
+### `mountUserProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<UserProfile />`][userprofile-ref] component |
+| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the [`<UserProfile />`][userprofile-ref] component |
+
+### `mountUserProfile()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {15-19}
@@ -62,22 +73,21 @@ Render the [`<UserProfile />`][userprofile-ref] component to an HTML `<div>` ele
   ```
 </CodeBlockTabs>
 
-### Properties
-
-```typescript
-function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<UserProfile />`][userprofile-ref] component |
-| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the [`<UserProfile />`][userprofile-ref] component |
-
 ## `unmountUserProfile()`
 
 Unmount and run cleanup on an existing [`<UserProfile />`][userprofile-ref] component instance.
 
-### Usage
+```typescript
+function unmountUserProfile(node: HTMLDivElement): void;
+```
+
+### `unmountUserProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<UserProfile />`][userprofile-ref] component instance. |
+
+### `unmountUserProfile()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
@@ -126,21 +136,21 @@ Unmount and run cleanup on an existing [`<UserProfile />`][userprofile-ref] comp
   ```
 </CodeBlockTabs>
 
-### Properties
-
-```typescript
-function unmountUserProfile(node: HTMLDivElement): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<UserProfile />`][userprofile-ref] component instance. |
-
 ## `openUserProfile()`
 
 Opens the [`<UserProfile />`][userprofile-ref] component as an overlay at the root of your HTML `body` element.
 
-### Usage
+```typescript
+function openUserProfile(props?: UserProfileProps): void;
+```
+
+### `openUserProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the [`<UserProfile />`][userprofile-ref] component |
+
+### `openUserProfile()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {7-11}
@@ -178,21 +188,15 @@ Opens the [`<UserProfile />`][userprofile-ref] component as an overlay at the ro
   ```
 </CodeBlockTabs>
 
-### Properties
-
-```typescript
-function openUserProfile(props?: UserProfileProps): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the [`<UserProfile />`][userprofile-ref] component |
-
 ## `closeUserProfile()`
 
 Closes the user profile overlay.
 
-### Usage
+```typescript
+function closeUserProfile(): void;
+```
+
+### `closeUserProfile()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {11}
@@ -229,12 +233,6 @@ Closes the user profile overlay.
   </script>
   ```
 </CodeBlockTabs>
-
-### Properties
-
-```typescript
-function closeUserProfile(): void;
-```
 
 ## Custom pages
 
