--- a/docs/references/javascript/email-address/email-address.mdx
+++ b/docs/references/javascript/email-address/email-address.mdx
@@ -26,30 +26,35 @@ Finally, email addresses can be linked to other identifications.
 
 ### `create()`
 
+Creates a new email address for the current user.
+
 ```typescript
 function create(): Promise<EmailAddress>;
 ```
 
-Creates a new email address for the current user.
-
 ### `destroy()`
+
+Deletes this email address.
 
 ```typescript
 function destroy(): Promise<void>;
 ```
 
-Deletes this email address.
-
 ### `toString()`
+
+Returns the value for this email address. Can also be accessed via the `EmailAddress.emailAddress` attribute.
 
 ```typescript
 function toString(): string;
 ```
 
-Returns the value for this email address. Can also be accessed via the `EmailAddress.emailAddress` attribute.
-
-
 ### `createMagicLinkFlow()`
+
+Sets up an email verification with magic link flow. Calling `createMagicLinkFlow()` will return two functions.
+
+The first function is async and starts the magic link flow, preparing a magic link verification. It sends the magic link email and starts polling for verification results. The signature is `startMagicLinkFlow({ redirectUrl: string }) => Promise<EmailAddress>`.
+
+The second function can be used to stop polling at any time, allowing for full control of the flow and cleanup. The signature is `cancelMagicLinkFlow() => void`.
 
 ```typescript
 function createMagicLinkFlow(): {
@@ -58,13 +63,7 @@ function createMagicLinkFlow(): {
 };
 ```
 
-Sets up an email verification with magic link flow. Calling `createMagicLinkFlow()` will return two functions.
-
-The first function is async and starts the magic link flow, preparing a magic link verification. It sends the magic link email and starts polling for verification results. The signature is `startMagicLinkFlow({ redirectUrl: string }) => Promise<EmailAddress>`.
-
-The second function can be used to stop polling at any time, allowing for full control of the flow and cleanup. The signature is `cancelMagicLinkFlow() => void`.
-
-#### Returns
+#### `createMagicLinkFlow()` returns
 
 `createMagicLinkFlow` returns an object with two functions:
 
