--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -27,7 +27,7 @@ function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResourc
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[ClerkPaginatedResponse][pag-res-ref]\<[OrganizationInvitation][orginv-ref]\>></code> | This method returns a `Promise` which resolves with a list of [`OrganizationInvitation`][orginv-ref] objects. |
+| <code>Promise\<[ClerkPaginatedResponse][pag-res-ref]\<[OrganizationInvitation][orginv-ref]\>></code> | A `Promise` which resolves with a list of [`OrganizationInvitation`][orginv-ref] objects. |
 
 ## `inviteMember()`
 
@@ -48,7 +48,7 @@ function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitatio
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationInvitation][orginv-ref]\></code> | This method returns a `Promise` which resolves to the [`OrganizationInvitation`][orginv-ref] for the created invitation. |
+| <code>Promise\<[OrganizationInvitation][orginv-ref]\></code> | A `Promise` which resolves to the [`OrganizationInvitation`][orginv-ref] for the created invitation. |
 
 ## `inviteMembers()`
 
@@ -69,7 +69,7 @@ function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitat
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationInvitation][orginv-ref][]\></code> | This method returns a `Promise` which resolves to a list of [`OrganizationInvitation`][orginv-ref]s for the created invitations. |
+| <code>Promise\<[OrganizationInvitation][orginv-ref][]\></code> | A `Promise` which resolves to a list of [`OrganizationInvitation`][orginv-ref]s for the created invitations. |
 
 [orginv-ref]: /docs/references/javascript/organization-invitation
 [pag-res-ref]: /docs/references/javascript/types/clerk-paginated-response
