--- a/docs/references/javascript/sign-in/sign-in.mdx
+++ b/docs/references/javascript/sign-in/sign-in.mdx
@@ -36,13 +36,13 @@ The `SignIn` object's properties can be split into logical groups, with each gro
 
 ### `create()`
 
-```typescript
-function create(params: SignInCreateParams): Promise<SignIn>;
-```
-
 Use this method to kick-off the sign in flow. It creates a [`SignIn`][signin-ref] object and stores the sign-in lifecycle state.
 
 Depending on the use-case and the `params` you pass to the `create` method, it can either complete the sign-in process in one go, or simply collect part of the necessary data for completing authentication at a later stage.
+
+```typescript
+function create(params: SignInCreateParams): Promise<SignIn>;
+```
 
 #### `SignInCreateParams`
 
@@ -56,19 +56,19 @@ Depending on the use-case and the `params` you pass to the `create` method, it c
 | `actionCompleteRedirectUrl?` | `string` | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only if `strategy` is set to an OAuth strategy like `oauth_<provider>`. |
 | `transfer?` | `boolean` | Transfer the user to a dedicated sign-in for an OAuth flow. |
 
-#### Returns
+#### `create()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[SignIn][signin-ref]\></code> | This method returns a `Promise` which resolves with a [`SignIn`][signin-ref] object. Check the `status` attribute to see if the sign-in has been completed or a hint on what needs to happen next. |
+| <code>Promise\<[SignIn][signin-ref]\></code> | A `Promise` which resolves with a [`SignIn`][signin-ref] object. Check the `status` attribute to see if the sign-in has been completed or a hint on what needs to happen next. |
 
 ### `resetPassword()`
+
+Resets a user's password.
 
 ```typescript
 function resetPassword(params: ResetPasswordParams): Promise<SignIn>;
 ```
-
-Resets a user's password.
 
 #### `ResetPasswordParams`
 
@@ -77,7 +77,17 @@ Resets a user's password.
 | `password` | `string` | The user's current password. |
 | `signOutOfOtherSessions?` | `boolean \| undefined` | If `true`, log the user out of all other authenticated sessions. |
 
+#### `resetPassword()` returns
+
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[SignIn][signin-ref]\></code> | A `Promise` which resolves with a [`SignIn`][signin-ref] object. |
+
 ### `createMagicLinkFlow()`
+
+Sets up a sign in with magic link flow. Calling `createMagicLinkFlow()` will return two functions. The first function is async and starts the magic link flow, preparing a magic link verification. It sends the magic link email and starts polling for verification results. The signature is `startMagicLinkFlow({ redirectUrl: string, emailAddressId: string }) => Promise<SignInResource>`.
+
+The second function can be used to stop polling at any time, allowing for full control of the flow and cleanup. The signature is `cancelMagicLinkFlow() => void`.
 
 ```typescript
 function createMagicLinkFlow(): {
@@ -85,12 +95,7 @@ function createMagicLinkFlow(): {
   cancelMagicLinkFlow: () => void
 }
 ```
-
-Sets up a sign in with magic link flow. Calling `createMagicLinkFlow()` will return two functions. The first function is async and starts the magic link flow, preparing a magic link verification. It sends the magic link email and starts polling for verification results. The signature is `startMagicLinkFlow({ redirectUrl: string, emailAddressId: string }) => Promise<SignInResource>`.
-
-The second function can be used to stop polling at any time, allowing for full control of the flow and cleanup. The signature is `cancelMagicLinkFlow() => void`.
-
-#### Returns
+#### `createMagicLinkFlow()` returns
 
 `createMagicLinkFlow` returns an object with two functions:
 
