--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -77,6 +77,12 @@ All props below are optional.
 | `primaryWeb3WalletId` | `string` | The unique identifier for the [`Web3Wallet`][web3-ref] that the user signed up with. |
 | `unsafeMetadata` | `{[string]: any} \| null` | Metadata that can be read and set from the Frontend API. One common use case for this attribute is to implement custom fields that will be attached to the `User` object.<br />Please note that there is also an `unsafeMetadata` attribute in the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete. |
 
+#### `update()` returns
+
+| Type | Description |
+| --- | --- |
+| <code>Promise\<User\></code> | This method returns a `Promise` which resolves with the current `User` object. |
+
 ### `delete()`
 
 Deletes the current user.
@@ -103,7 +109,7 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[ImageResource](#image-resource)\></code> | The uploaded image. |
+| <code>Promise\<[ImageResource](#image-resource)\></code> | This method returns a `Promise` which resolves with the current uploaded image. |
 
 ##### `ImageResource`
 
@@ -115,25 +121,25 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
 
 ### `getSessions()`
 
+Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
+
 ```typescript
 function getSessions: () => Promise<SessionWithActivities[]>;
 ```
-
-Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
 
 #### `getSessions()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)\></code> | The list of active user sessions. |
+| <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)[]\></code> | This method returns a `Promise` which resolves with an array of `SessionWithActivities` objects. |
 
 ### `isPrimaryIdentification()`
+
+A check whether or not the given resource is the primary identifier for the user.
 
 ```typescript
 function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberResource | Web3WalletResource) => boolean;
 ```
-
-A check whether or not the given resource is the primary identifier for the user.
 
 #### `isPrimaryIdentification()` params
 
