CommonPaginatedParams should be ClerkPaginationParams

--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -224,13 +224,13 @@ export default InvitationsTable;
 
 | Properties | Description |
 | --- | --- |
-| `userMemberships` | [`CommonPaginatedParams`](#commonpaginatedparams) |
-| `userInvitations` | [`CommonPaginatedParams`](#commonpaginatedparams) and `status` which describes the status of an invitation, defaults to `pending`. |
-| `userSuggestions` | [`CommonPaginatedParams`](#commonpaginatedparams) and `status` which describes the status of a suggestion, defaults to `pending`. |
+| `userMemberships` | [`ClerkPaginationParams`](#clerk-pagination-params) |
+| `userInvitations` | [`ClerkPaginationParams`](#clerk-pagination-params) and `status` which describes the status of an invitation, defaults to `pending`. |
+| `userSuggestions` | [`ClerkPaginationParams`](#clerk-pagination-params) and `status` which describes the status of a suggestion, defaults to `pending`. |
 
-### `CommonPaginatedParams`
+### `ClerkPaginationParams`
 
-`CommonPaginatedParams` can be either `true` or an object with the properties described below. If set to `true`, all of the default values will be used.
+`ClerkPaginationParams` can be either `true` or an object with the properties described below. If set to `true`, all of the default values will be used.
 
 | Properties | Description |
 | --- | --- |
