--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -160,14 +160,14 @@ To see a demo application utilising the hook and the organizations feature, take
 
 | Properties | Description |
 | --- | --- |
-| `invitations?` | [`CommonPaginatedParams`](#common-paginated-params) and [`OrganizationInvitationStatus[]`](#organization-invitation-status) |
-| `membershipRequests?` | [`CommonPaginatedParams`](#common-paginated-params) and [`OrganizationInvitationStatus`](#organization-invitation-status) |
-| `memberships?` | [`CommonPaginatedParams`](#common-paginated-params) and [`OrganizationCustomRoleKey?`](#organization-custom-role-key) |
-| `domains?` | [`CommonPaginatedParams`](#commonpaginated-params) and [`OrganizationEnrollmentMode`](#organization-enrollment-mode) |
+| `invitations?` | [`ClerkPaginationParams`](#clerk-pagination-params) and [`OrganizationInvitationStatus[]`](#organization-invitation-status) |
+| `membershipRequests?` | [`ClerkPaginationParams`](#clerk-pagination-params) and [`OrganizationInvitationStatus`](#organization-invitation-status) |
+| `memberships?` | [`ClerkPaginationParams`](#clerk-pagination-params) and [`OrganizationCustomRoleKey?`](#organization-custom-role-key) |
+| `domains?` | [`ClerkPaginationParams`](#clerk-pagination-params) and [`OrganizationEnrollmentMode`](#organization-enrollment-mode) |
 
-### `CommonPaginatedParams`
+### `ClerkPaginationParams`
 
-`CommonPaginatedParams` can be either `true` or an object with the properties described below. If set to `true`, all of the default values will be used.
+`ClerkPaginationParams` can be either `true` or an object with the properties described below. If set to `true`, all of the default values will be used.
 
 | Properties | Description |
 | --- | --- |
