Update headings for JS SDK docs (#640)

--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -9,11 +9,11 @@ The [`User`](/docs/references/javascript/user/user) object has methods that help
 
 ## `createEmailAddress()`
 
+Adds an email address for the user. A new [`EmailAddress`][email-ref] will be created and associated with the user.
+
 ```typescript
 function createEmailAddress: (params: CreateEmailAddressParams) => Promise<EmailAddress>;
 ```
-
-Adds an email address for the user. A new [`EmailAddress`][email-ref] will be created and associated with the user.
 
 ### `CreateEmailAddressParams`
 
@@ -21,7 +21,7 @@ Adds an email address for the user. A new [`EmailAddress`][email-ref] will be cr
 | --- | --- | --- |
 | `email` | `string` | The value of the email address |
 
-### Returns
+### `createEmailAddress()` returns
 
 | Type | Description |
 | --- | --- |
@@ -29,11 +29,11 @@ Adds an email address for the user. A new [`EmailAddress`][email-ref] will be cr
 
 ## `createPhoneNumber()`
 
+Adds a phone number for the user. A new [`PhoneNumber`][phone-ref] will be created and associated with the user.
+
 ```typescript
 function createPhoneNumber: (params: CreatePhoneNumberParams) => Promise<PhoneNumber>;
 ```
-
-Adds a phone number for the user. A new [`PhoneNumber`][phone-ref] will be created and associated with the user.
 
 ### `CreatePhoneNumberParams`
 
@@ -41,7 +41,7 @@ Adds a phone number for the user. A new [`PhoneNumber`][phone-ref] will be creat
 | --- | --- | --- |
 | `phoneNumber` | `string` | The value of the phone number, in [E.164](https://en.wikipedia.org/wiki/E.164) format. |
 
-### Returns
+### `createPhoneNumber()` returns
 
 | Type | Description |
 | --- | --- |
@@ -49,11 +49,11 @@ Adds a phone number for the user. A new [`PhoneNumber`][phone-ref] will be creat
 
 ## `createWeb3Wallet()`
 
+Adds a web3 wallet for the user. A new [`Web3Wallet<`][web3-ref] will be created and associated with the user.
+
 ```typescript
 function createWeb3Wallet: (params: CreateWeb3WalletParams) => Promise<Web3Wallet>;
 ```
-
-Adds a web3 wallet for the user. A new [`Web3Wallet<`][web3-ref] will be created and associated with the user.
 
 ### `CreateWeb3WalletParams`
 
@@ -61,7 +61,7 @@ Adds a web3 wallet for the user. A new [`Web3Wallet<`][web3-ref] will be created
 | --- | --- | --- |
 | `web3Wallet` | `string` | In [Ethereum](https://docs.metamask.io/guide/common-terms.html#address-public-key), the address is made up of `0x + 40` hexadecimal characters |
 
-### Returns
+### `createWeb3Wallet()` returns
 
 | Type | Description |
 | --- | --- |
@@ -69,11 +69,11 @@ Adds a web3 wallet for the user. A new [`Web3Wallet<`][web3-ref] will be created
 
 ## `createExternalAccount()`
 
+Adds an external account for the user. A new [`ExternalAccount`][exacc-ref] will be created and associated with the user.
+
 ```typescript
 function createExternalAccount: (params: CreateExternalAccountParams) => Promise<ExternalAccount>;
 ```
-
-Adds an external account for the user. A new [`ExternalAccount`][exacc-ref] will be created and associated with the user.
 
 ### `CreateExternalAccountParams`
 
@@ -83,11 +83,11 @@ Adds an external account for the user. A new [`ExternalAccount`][exacc-ref] will
 | `redirectUrl?` | `string` | The URL to redirect back to one the oauth flow has completed successfully or unsuccessfully. |
 | `additionalScopes?` | `string[]` | Any additional scopes you would like your user to be prompted to approve. |
 
-### Returns
+### `createExternalAccount()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[ExternalAccount][exacc-ref]\></code> | The external account created for the user. |
+| <code>Promise\<[ExternalAccount][exacc-ref]\></code> | A `Promise` which resolves with the external account created for the user. |
 
 The initial `state` of the returned `ExternalAccount` will be `unverified`. To initiate the connection with the external provider one should redirect to the `externalAccount.verification.externalVerificationRedirectURL` contained in the result of `createExternalAccount`.
 
