--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -31,7 +31,7 @@ function getMemberships(params?: GetMembersParams): Promise<ClerkPaginatedRespon
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[ClerkPaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | This method returns a `Promise` which resolves with a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
+| <code>Promise\<[ClerkPaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | A `Promise` which resolves with a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
 
 ## getMembershipRequests()
 
@@ -70,7 +70,7 @@ function addMember(params: AddMemberParams): Promise<OrganizationMembership>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the[`OrganizationMembership`][org-mem-ref] objects. |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | A `Promise` which resolves with the[`OrganizationMembership`][org-mem-ref] objects. |
 
 ## `updateMember()`
 
@@ -91,7 +91,7 @@ function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembe
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the updated [`OrganizationMembership`][org-mem-ref] objects. |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | A `Promise` which resolves with the updated [`OrganizationMembership`][org-mem-ref] objects. |
 
 ## `removeMember()`
 
@@ -111,7 +111,7 @@ function removeMember(userId: string): Promise<OrganizationMembership>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the removed [`OrganizationMembership`][org-mem-ref] object. |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | A `Promise` which resolves with the removed [`OrganizationMembership`][org-mem-ref] object. |
 
 [pag-ref]: /docs/references/javascript/types/clerk-paginated-response
 [org-mem-ref]: /docs/references/javascript/organization-membership
