--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -45,7 +45,7 @@ function update(params: UpdateOrganizationParams): Promise<Organization>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[Organization][org-ref]\></code> | This method returns a `Promise` which resolves to an [Organization][org-ref]. |
+| <code>Promise\<[Organization][org-ref]\></code> | A `Promise` which resolves to an [Organization][org-ref]. |
 
 ### `destroy()`
 
@@ -56,12 +56,6 @@ Please note that deleting an organization will also delete all memberships and i
 ```typescript
 function destroy(): Promise<void>;
 ```
-
-#### `destroy()` returns
-
-| Type | Description |
-| --- | --- |
-| `Promise<void>` | This method returns a `Promise` which doesn't resolve to any value. |
 
 ### `setLogo()`
 
@@ -81,7 +75,7 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[Organization][org-ref]\></code> | This method returns a `Promise` which resolves to an [Organization][org-ref]. |
+| <code>Promise\<[Organization][org-ref]\></code> | A `Promise` which resolves to an [Organization][org-ref]. |
 
 ### `getRoles()`
 
