--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -9,14 +9,13 @@ The [`User`](/docs/references/javascript/user/user) object has methods that help
 
 ## `updatePassword()`
 
+Updates the user's password.
+
 ```typescript
 function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
 ```
 
-Updates the user's password.
-
 ### `UpdateUserPasswordParams`
-
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -24,16 +23,30 @@ Updates the user's password.
 | `currentPassword?` | `string` | The user's current password. |
 | `signOutOfOtherSessions?` | `boolean \| undefined` | If set to `true`, all sessions will be signed out. |
 
+### `updatePassword()` returns
+
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[User][user-ref]\></code> | A `Promise` which resolves with the current [`User`][user-ref]. |
+
 ## `removePassword()`
+
+Removes the user's password.
 
 ```typescript
 function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
 ```
-
-Removes the user's password.
 
 ### `RemoveUserPasswordParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `currentPassword` | `string` | The user's current password. |
+
+### `removePassword()` returns
+
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[User][user-ref]\></code> | A `Promise` which resolves with the current [`User`][user-ref]. |
+
+[user-ref]: /docs/references/javascript/user/user
