Update headings for JS SDK docs (#640)

--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -80,7 +80,7 @@ function create(params: SignUpCreateParams): Promise<SignUpResource>;
 
 | Type | Description |
 | --- | --- |
-| `Promise<SignUpResource>` | A `Promise` which resolves to the current [`SignUp`][signup-ref]. |
+| `Promise<SignUpResource>` | A `Promise` which resolves to the current `SignUp`. |
 
 ### `update()`
 
@@ -100,7 +100,7 @@ function update(params: SignUpUpdateParams): Promise<SignUpResource>;
 
 | Type | Description |
 | --- | --- |
-| `Promise<SignUpResource>` | This method returns a `Promise` which resolves to the current [`SignUp`][signup-ref]. |
+| `Promise<SignUpResource>` | This method returns a `Promise` which resolves to the current `SignUp`. |
 
 ### `createEmailLinkFlow()`
 
@@ -160,5 +160,3 @@ In addition to the methods listed above, the `SignUp` class also has the followi
 
 *   [`prepareWeb3WalletVerification()`](/docs/references/javascript/sign-up/web3-verification#prepare-web3-wallet-verification)
 *   [`attemptWeb3WalletVerification()`](/docs/references/javascript/sign-up/web3-verification#attempt-web3-wallet-verification)
-
-[signup-ref]: /docs/references/javascript/sign-up/sign-up
